Align books to the left, fix redirect link

--- a/src/app/components/book-list/book-list.component.scss
+++ b/src/app/components/book-list/book-list.component.scss
@@ -1,5 +1,5 @@
 .book-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
